syntax = "proto3";
package lavanet.lava.spec;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
option go_package = "github.com/lavanet/lava/v5/x/spec/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  reserved 1;
  uint64 maxCU = 2 [(gogoproto.moretags) = "yaml:\"max_compute_units\""];
  repeated string allowlisted_expedited_msgs = 3 [(gogoproto.moretags) = "yaml:\"allowlisted_expedited_msgs\""];
  cosmos.base.v1beta1.Coin provider_min_stake = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "provider_min_stake"];
}